SONARJAVA-4518 Introduce a new IssueFilter targeting Spring (#4398)